samples/_failures_safe/1761085985_20676f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4769d1d0.c: In function ‘main’:
./samples/SAFE/__tmp_4769d1d0.c:149:5: error: expected declaration or statement at end of input
  149 |     }
      |     ^
